--- a/hackathons/Playstore.ipynb
+++ b/hackathons/Playstore.ipynb
@@ -109,13 +109,140 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "    Offered_By         Category  Rating  Reviews                Size  \\\n0  ps_id-24654          Finance    4.18     1481  Varies with device   \n1  ps_id-35329  Music And Audio    4.81      302                 10M   \n2  ps_id-11044      Game Casual    4.27      374                 27M   \n3  ps_id-36068         Business    4.03   122058  Varies with device   \n4  ps_id-35831          Medical    4.60      358  Varies with device   \n\n      Price Content_Rating Last_Updated_On     Release_Version  \\\n0      Free       Everyone     May 05 2020  Varies with device   \n1      Free       Everyone     Mar 26 2020              3.9.18   \n2      Free       Everyone     May 01 2020              1.10.1   \n3      Free           Teen     May 02 2020  Varies with device   \n4  297.5742       Everyone     Nov 29 2018  Varies with device   \n\n  OS_Version_Required    Downloads  \n0  Varies with device     100,000+  \n1          4.1 and up       5,000+  \n2          4.1 and up      10,000+  \n3  Varies with device  10,000,000+  \n4  Varies with device       5,000+  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Offered_By</th>\n      <th>Category</th>\n      <th>Rating</th>\n      <th>Reviews</th>\n      <th>Size</th>\n      <th>Price</th>\n      <th>Content_Rating</th>\n      <th>Last_Updated_On</th>\n      <th>Release_Version</th>\n      <th>OS_Version_Required</th>\n      <th>Downloads</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ps_id-24654</td>\n      <td>Finance</td>\n      <td>4.18</td>\n      <td>1481</td>\n      <td>Varies with device</td>\n      <td>Free</td>\n      <td>Everyone</td>\n      <td>May 05 2020</td>\n      <td>Varies with device</td>\n      <td>Varies with device</td>\n      <td>100,000+</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ps_id-35329</td>\n      <td>Music And Audio</td>\n      <td>4.81</td>\n      <td>302</td>\n      <td>10M</td>\n      <td>Free</td>\n      <td>Everyone</td>\n      <td>Mar 26 2020</td>\n      <td>3.9.18</td>\n      <td>4.1 and up</td>\n      <td>5,000+</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ps_id-11044</td>\n      <td>Game Casual</td>\n      <td>4.27</td>\n      <td>374</td>\n      <td>27M</td>\n      <td>Free</td>\n      <td>Everyone</td>\n      <td>May 01 2020</td>\n      <td>1.10.1</td>\n      <td>4.1 and up</td>\n      <td>10,000+</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ps_id-36068</td>\n      <td>Business</td>\n      <td>4.03</td>\n      <td>122058</td>\n      <td>Varies with device</td>\n      <td>Free</td>\n      <td>Teen</td>\n      <td>May 02 2020</td>\n      <td>Varies with device</td>\n      <td>Varies with device</td>\n      <td>10,000,000+</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ps_id-35831</td>\n      <td>Medical</td>\n      <td>4.60</td>\n      <td>358</td>\n      <td>Varies with device</td>\n      <td>297.5742</td>\n      <td>Everyone</td>\n      <td>Nov 29 2018</td>\n      <td>Varies with device</td>\n      <td>Varies with device</td>\n      <td>5,000+</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Offered_By</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Content_Rating</th>\n",
+       "      <th>Last_Updated_On</th>\n",
+       "      <th>Release_Version</th>\n",
+       "      <th>OS_Version_Required</th>\n",
+       "      <th>Downloads</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ps_id-24654</td>\n",
+       "      <td>Finance</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>1481</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>May 05 2020</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>100,000+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ps_id-35329</td>\n",
+       "      <td>Music And Audio</td>\n",
+       "      <td>4.81</td>\n",
+       "      <td>302</td>\n",
+       "      <td>10M</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Mar 26 2020</td>\n",
+       "      <td>3.9.18</td>\n",
+       "      <td>4.1 and up</td>\n",
+       "      <td>5,000+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ps_id-11044</td>\n",
+       "      <td>Game Casual</td>\n",
+       "      <td>4.27</td>\n",
+       "      <td>374</td>\n",
+       "      <td>27M</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>May 01 2020</td>\n",
+       "      <td>1.10.1</td>\n",
+       "      <td>4.1 and up</td>\n",
+       "      <td>10,000+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ps_id-36068</td>\n",
+       "      <td>Business</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>122058</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>Free</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>May 02 2020</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>10,000,000+</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ps_id-35831</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>358</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>297.5742</td>\n",
+       "      <td>Everyone</td>\n",
+       "      <td>Nov 29 2018</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>Varies with device</td>\n",
+       "      <td>5,000+</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Offered_By         Category  Rating  Reviews                Size  \\\n",
+       "0  ps_id-24654          Finance    4.18     1481  Varies with device   \n",
+       "1  ps_id-35329  Music And Audio    4.81      302                 10M   \n",
+       "2  ps_id-11044      Game Casual    4.27      374                 27M   \n",
+       "3  ps_id-36068         Business    4.03   122058  Varies with device   \n",
+       "4  ps_id-35831          Medical    4.60      358  Varies with device   \n",
+       "\n",
+       "      Price Content_Rating Last_Updated_On     Release_Version  \\\n",
+       "0      Free       Everyone     May 05 2020  Varies with device   \n",
+       "1      Free       Everyone     Mar 26 2020              3.9.18   \n",
+       "2      Free       Everyone     May 01 2020              1.10.1   \n",
+       "3      Free           Teen     May 02 2020  Varies with device   \n",
+       "4  297.5742       Everyone     Nov 29 2018  Varies with device   \n",
+       "\n",
+       "  OS_Version_Required    Downloads  \n",
+       "0  Varies with device     100,000+  \n",
+       "1          4.1 and up       5,000+  \n",
+       "2          4.1 and up      10,000+  \n",
+       "3  Varies with device  10,000,000+  \n",
+       "4  Varies with device       5,000+  "
+      ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "execution_count": 20
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -130,9 +257,17 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Category : (51,)\nSize : (439,)\nContent_Rating : (6,)\nRelease_Version : (4190,)\nOS_Version_Required : (27,)\nDownloads : (18,)\nLast_Updated_On : (1583,)\n"
+     "output_type": "stream",
+     "text": [
+      "Category : (51,)\n",
+      "Size : (439,)\n",
+      "Content_Rating : (6,)\n",
+      "Release_Version : (4190,)\n",
+      "OS_Version_Required : (27,)\n",
+      "Downloads : (18,)\n",
+      "Last_Updated_On : (1583,)\n"
+     ]
     }
    ],
    "source": [
@@ -182,12 +317,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "(16516, 4)"
+      "text/plain": [
+       "(16516, 4)"
+      ]
      },
+     "execution_count": 98,
      "metadata": {},
-     "execution_count": 98
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -221,9 +358,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "2.152368468865916\n"
+     "output_type": "stream",
+     "text": [
+      "2.152368468865916\n"
+     ]
     }
    ],
    "source": [
@@ -239,9 +378,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "1.0233859703780168\n"
+     "output_type": "stream",
+     "text": [
+      "1.0233859703780168\n"
+     ]
     }
    ],
    "source": [
@@ -261,9 +402,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.8 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python36864bitc4644ebd35af45be9b4a2c5bf182f1bf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -275,9 +416,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8-final"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
